Closed Bug 177177 Opened 22 years ago Closed 22 years ago

Changing "View -> Show Name As" option does not re-sort

Categories

(SeaMonkey :: MailNews: Address Book & Contacts, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.3alpha

People

(Reporter: nhottanscp, Assigned: nhottanscp)

Details

Attachments

(1 file)

When "Name" is set as the primary sort and View->Show Name As is checked as "Display Name", change the option to either "First Last" or "Last First" does not re-sort the list but ascending/descending direction is changed instead.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.3alpha
Comment on attachment 104546 [details] [diff] [review] Fixed the comparison code for the sort direction in SortBy(). sr=sspitzer thanks for fixing my mistake.
Attachment #104546 - Flags: superreview+
Comment on attachment 104546 [details] [diff] [review] Fixed the comparison code for the sort direction in SortBy(). r=cavin.
Attachment #104546 - Flags: review+
checked in to the trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Trunk build 2002-11-21: WinMe, Linux 8 , Mac 10.1.3 Verified Fixed.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: