Fixed the comparison code for the sort direction in SortBy(), bug 177177, r=cavin, sr=sspitzer.